# ekkesQtCMakeLists

./: README.md
cmake_lists/: CMakeLists.txt  CompactCMakeLists.txt  README_CMakeLists.md
collect_filenames/: README_CollectFilenames.md
collect_filenames/externaltools/: FileNames__cpp_.xml  FileNames__cpp_android_.xml  FileNames__cpp_ios_.xml  FileNames__data_assets_.xml  FileNames__images_.xml  FileNames__ios_src_.xml  FileNames__js_.xml  FileNames__qml_.xml  FileNames__qmldir_.xml  list_all_my_files.xml
collect_filenames/macos_scripts/: all_my_files.sh  my_android_cpp_source_files.sh  my_cpp_source_files.sh  my_data-assets_files.sh  my_image_files.sh  my_ios_cpp_source_files.sh  my_ios_objc_source_files.sh  my_js_files.sh  my_qml_files.sh  my_qmldir_files.sh
collect_filenames/qtws_example/ekkesLists/: my_cpp_files.cmake  my_data-assets_files.cmake  my_image_files.cmake  my_qml_files.cmake  my_qmldir_files.cmake
ekkes_cmake_snippets/: README_snippets.md  cmake_ios_orientation.txt  cmake_ios_sharing.txt  cmake_ios_usage_descriptions.txt
ios/: Info.plist  MyLaunchScreen.storyboard  README_ios_assets.md
projectinfo_formular/: MyCMake.dotx
qml/: README_qml_nested_folders.md  qmldir
